# chair_detector

./: CMakeLists.txt  README.md  package.xml
chair_detection/: package.xml  setup.cfg  setup.py
chair_detection/chair_detection/: chair_detection.py
config/: range_filter.yaml
detection/: CMakeLists.txt  package.xml
launch/: chair_detection.launch.py
log/: latest_list
scan_to_pointcloud/: CMakeLists.txt  package.xml
scan_to_pointcloud/src/: scan_to_pointcloud.cpp
src/: chair_detector.cpp  chair_detector_v2.cpp  chair_detector_v3.cpp  detection.cpp  leg_detector.cpp  leg_detector_v2.cpp
