<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>detection</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="oumuika@gmail.com">jetson</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <exec_depend>rclcpp</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>pcl_conversions</exec_depend>
  <exec_depend>pcl_msgs</exec_depend>
  <exec_depend>PCL</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>  <!-- 追加 -->


  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>





<?xml version="1.0"?>
<package format="2">
  <name>scan_to_pointcloud</name>
  <version>0.0.0</version>
  <description>LaserScan to PointCloud2 converter node</description>
  <maintainer email="user@domain.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rclcpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>laser_geometry</build_depend>

  <exec_depend>rclcpp</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>laser_geometry</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
