<?xml version="1.0"?>
<package format="2">
  <name>scan_to_pointcloud</name>
  <version>0.0.0</version>
  <description>LaserScan to PointCloud2 converter node</description>
  <maintainer email="user@domain.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rclcpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>laser_geometry</build_depend>

  <exec_depend>rclcpp</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>laser_geometry</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
